Add local images and update homepage

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 <body>
 
   <div class="gallery">
-    <img src="https://upload.wikimedia.org/wikipedia/en/6/6e/Puss_in_Boots_%282011_film%29_poster.jpg" alt="Puss in Boots Poster">
+    <img src="puss.jpeg" alt="Puss in Boots Poster">
     <img src="https://upload.wikimedia.org/wikipedia/en/8/8a/Dark_Knight.jpg" alt="Dark Knight Poster">
   </div>
 
