--- a/PetStoreWebsite/index.html
+++ b/PetStoreWebsite/index.html
@@ -1,72 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-
-
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Pet Store</title>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Pet Store</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
-
-
 <body>
-  <header>
-    <h1>Welcome to Our Pet Store</h1>
-    <nav>
-      <a href="index.html">Home</a>
-      <a href="Pets.html">Pets</a>
-      <a href="#Contact">Contact</a>
-    </nav>
-  </header>
+    <header style="background: url('img/jumbotron.jpg') center/cover no-repeat;">
+        <h1>Welcome to Our Pet Store</h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="pets.html">Pets</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
 
+    <main>
+        <section class="featured">
+            <h2>All Pets</h2>
+            <div class="pet-list">
+                <div class="pet">
+                    <img src="img/dog.jpg" alt="Cute Dog">
+                    <p>Charlie - Golden Retriever</p>
+                    <button onclick="adoptPet()">Adopt Now</button>
+                </div>
+                <div class="pet">
+                    <img src="img/cat.webp" alt="Cute Cat">
+                    <p>Milo - British Shorthair</p>
+                    <button onclick="adoptPet()">Adopt Now</button>
+                </div>
+            </div>
+        </section>
 
-  <main>
-    <section class="featured">
-      <h2>Featured Pets</h2>
-      <div class="pet-list">
-        <div class="pet">
-          <img src="images/dog.jpg" alt="Cute Dog">
-          <p>Charlie - Golden Retriever</p>
-          <button onclick="adoptPet()">Adopt Now</button>
-        </div>
-        <div class="pet">
-          <img src="images/cat.webp" alt="Cute Cat">
-          <p>Milo - British Shorthair</p>
-          <button onclick="adoptPet()">Adopt Now</button>
-        </div>
-      </div>
-    </section>
-  </main>
+    </main>
 
+    <footer id="contact" style="background-color: rgba(24, 204, 204, 0.513);">
+            <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
+                <div id="address" style="flex: 1;">
+                    <h2>Our Pet Shop</h2>
+                    <p>88 หมู่ที่ 8 ถนน บางนา-ตราด Bang Sao Thong, Bang Sao Thong District, Samut Prakan 10540</p>
+                    <p>Email: <strong>info@petstore.com</strong></p>
+                </div>
+                <div id="map" style="flex: 2; margin: 10px 0;">
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3877.757578305562!2d100.83534157410966!3d13.611612686765792!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x311d430e775155f9%3A0xf01923824353260!2sAssumption%20University%20Suvarnabhumi%20Campus!5e0!3m2!1sen!2sth!4v1749542866348!5m2!1sen!2sth" width="400" height="250" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                </div>
+            </div>
 
- <section class="location" id = "Contact">
-
-  <div class="address">
-    <h2>Our Location</h2>
-    <p>123 Pet Street, Animal City, PA 12345</p>
-    <p>Email: info@petstore.com</p>
-    <p>Phone: +1 (555) 123-4567</p>
-  </div>
-
-  <div class="map">
-    <iframe
-      src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3153.019623413346!2d-122.41941518468158!3d37.77492977975925!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x80858064f4d4c5a7%3A0x8a3f20fdd6f7a5c7!2sSan+Francisco%2C+CA!5e0!3m2!1sen!2sus!4v1600000000000!5m2!1sen!2sus"
-      width="300"
-      height="200"
-      style="border:0;"
-      allowfullscreen=""
-      loading="lazy"
-      referrerpolicy="no-referrer-when-downgrade">
-    </iframe>
-  </div>
-
-</section>
-
-
-  <script src="script.js"></script>
+    </footer>
+    <script src="script.js"></script>
 </body>
-
-
-
 </html>
