--- a/PetStoreWebsite/pets.html
+++ b/PetStoreWebsite/pets.html
@@ -12,7 +12,7 @@
     <header style="background: url('img/jumbotron.jpg') center/cover no-repeat;">
         <h1>Welcome to Our Pet Store</h1>
         <nav>
-            <a href="index.html">Home</a>
+            <a href="#">Home</a>
             <a href="pets.html">Pets</a>
             <a href="#contact">Contact</a>
         </nav>
@@ -54,7 +54,7 @@
         </section>
     </main>
 
-    <footer id="contact" style="background-color: rgba(23, 190, 126, 0.513);">
+    <footer id="contact" style="background-color: rgba(42, 135, 234, 0.513);">
         <div id="contact" style="display: flex; gap: 24px; align-items: flex-start; width: 60%; margin: 0 auto;">
             <div id="address" style="flex: 1;">
                 <h2>Our Pet Shop</h2>
