--- a/PetStoreWebsite/pets.html
+++ b/PetStoreWebsite/pets.html
@@ -12,7 +12,7 @@
     <header style="background: url('img/jumbotron.jpg') center/cover no-repeat;">
         <h1>Welcome to Our Pet Store</h1>
         <nav>
-            <a href="#">Home</a>
+            <a href="index.html">Home</a>
             <a href="pets.html">Pets</a>
             <a href="#contact">Contact</a>
         </nav>
