Implement VAT calculator in React with Vite

--- a/Vat/index.html
+++ b/Vat/index.html
@@ -1,28 +1,13 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-
-<body>
-    Base Price
-    <input type="number" id="basePrice" value="" />
-    <button onClick="calculate()">Calculate</button>
-    <br/>
-    Price + VAT = <span id="result"></span>
-    <hr/>
-
-    <br/><br/>
-    Price with VAT
-    <input type="number" id="totalPrice" value="" />
-    <button onClick="reverseCalculate()">Reverse Calculate</button>
-    <br/>
-    Base + VAT = <span id="reverseResult"></span>
-
-
-
-
-
-</body>
-
-<script src="https://code.jquery.com/jquery-3.7.1.slim.min.js"
-    integrity="sha256-kmHvs0B+OpCW5GVHUNjv9rOmY0IvSIRcf7zGUDTDQM8=" crossorigin="anonymous"></script>
-<script src="cal.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Vite + React</title>
+  </head>
+  <body>
+    <div id="root"></div>
+    <script type="module" src="/src/main.jsx"></script>
+  </body>
 </html>
